Sync templates with backed-up home + add song/meta templates

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,13 +1,14 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<!doctype html>
+<html lang="en">
 <head>
-    <title>Home - Album Player</title>
+  <meta charset="utf-8">
+  <title>Album Player</title>
+  <link rel="stylesheet" href="/css/player.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
-    <h1>Welcome Home</h1>
-    <p>This is the user’s dashboard page.</p>
-    <a href="/producer">Go to Producer Page</a> |
-    <a href="/song">Go to Song Page</a> |
-    <a href="/meta">Go to Metadata Page</a>
+  <h1>Album Player is live</h1>
+  <p>This page confirms routing + Thymeleaf are working.</p>
+  <script src="/js/player.js"></script>
 </body>
 </html>
