--- a/src/main/resources/templates/song.html
+++ b/src/main/resources/templates/song.html
@@ -1,17 +1,15 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<!doctype html>
+<html lang="en">
 <head>
-    <title>Song - Album Player</title>
+  <meta charset="utf-8">
+  <title>Album Player – Song</title>
+  <link rel="stylesheet" href="/css/player.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
-    <h1>Song Page</h1>
-    <form>
-        <label>Song Title:</label>
-        <input type="text" name="songTitle"><br><br>
-        <label>Duration:</label>
-        <input type="text" name="duration"><br><br>
-        <button type="submit">Save</button>
-    </form>
-    <a href="/home">Back to Home</a>
+  <h1>Song Page</h1>
+  <p>This is the Song view, styled by <code>/css/player.css</code> and driven by <code>/js/player.js</code> if needed.</p>
+  <script src="/js/player.js"></script>
 </body>
 </html>
+
