--- a/src/main/resources/templates/meta.html
+++ b/src/main/resources/templates/meta.html
@@ -1,19 +1,15 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<!doctype html>
+<html lang="en">
 <head>
-    <title>Metadata - Album Player</title>
+  <meta charset="utf-8">
+  <title>Album Player – Meta</title>
+  <link rel="stylesheet" href="/css/player.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
-    <h1>Metadata Page</h1>
-    <form>
-        <label>Key:</label>
-        <input type="text" name="key"><br><br>
-        <label>BPM:</label>
-        <input type="text" name="bpm"><br><br>
-        <label>Energy:</label>
-        <input type="text" name="energy"><br><br>
-        <button type="submit">Save</button>
-    </form>
-    <a href="/home">Back to Home</a>
+  <h1>Meta Page</h1>
+  <p>This is the Meta view, styled by <code>/css/player.css</code> and driven by <code>/js/player.js</code> if needed.</p>
+  <script src="/js/player.js"></script>
 </body>
 </html>
+
